# gpsstats

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindLibGPS.cmake  FindLibYAML.cmake  FindMosquitto.cmake  gpsstats.h.in
include/: config.h  gpsd.h  gpsstats.h  logging.h  mqtt.h  timespec.h  util.h
src/: config.c  gpsd.c  logging.c  main.c  mqtt.c  utils.c
src/inc/: config.h  gpsstats.h
